--- a/4-uniswapv2/package.json
+++ b/4-uniswapv2/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@parity/hardhat-polkadot": "^0.1.9",
+    "@parity/resolc": "0.2.0",
     "@types/node": "^24.10.1",
     "dockerode": "^4.0.9",
     "dotenv": "^17.2.3",
